[project]
name = "rmsd_map"
version = "0.0.1"
authors = [
  { name="Artem Dmitrienko", email="dmitrienka@gmail.com" },
]
description = "Code for calculating distance matrix for set of molecular fragments with rmsd"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
