[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "rmsd_map"
version         = "0.0.1"
description     = "Tools for RMSD distance matrices of molecular fragments"
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "Artem Dmitrienko", email = "dmitrienka@gmail.com"}]
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "jax>=0.5",
  "flax>=0.7",
  "polars>=0.20",
  "rdkit>=2023.09.1",
  "umap-learn>=0.5",
  "datashader",
  "pyarrow"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "mypy", "pre-commit"]

[project.scripts]
rmsd-map-distances = "rmsd_map.cli.calc_distances:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = ["."]
